@@ -1,6 +1,5 @@
 package com.javachallenges.collections;
 
-import java.util.Arrays;
 import java.util.List;
 
 /** Soon you will see the answers on
@@ -8,14 +7,14 @@ import java.util.List;
 public class ListChallenge {
  
     public static void main(final String... doYourBest) {
-        final List<String> soldiers = Arrays.asList("Tyrion", "Arya", "John");
- 
+        final List<String> soldiers = List.of("Tyrion", "Arya", "John");
+
         if (soldiers.size() > 3) {
             soldiers.add("Cersei");
         } else {
             soldiers.add("Bran");
         }
- 
+
         System.out.println(soldiers);
     }
  
